--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -11,19 +11,19 @@
             "esnext"
         ],
         "allowJs": true /* Allow javascript files to be compiled. */,
-        // "checkJs": true,                       /* Report errors in .js files. */
+        "checkJs": true,                       /* Report errors in .js files. */
         "jsx": "react" /* Specify JSX code generation: 'preserve', 'react-native', or 'react'. */,
         // "declaration": true,                   /* Generates corresponding '.d.ts' file. */
         // "declarationMap": true,                /* Generates a sourcemap for each corresponding '.d.ts' file. */
         "sourceMap": true /* Generates corresponding '.map' file. */,
         // "outFile": "./",                       /* Concatenate and emit output to single file. */
-        "outDir": "./dist" /* Redirect output structure to the directory. */,
+        "outDir": "../build_server" /* Redirect output structure to the directory. */,
         "rootDir": "." /* Specify the root directory of input files. Use to control the output directory structure with --outDir. */,
         "skipLibCheck": true,
         "forceConsistentCasingInFileNames": true,
         "resolveJsonModule": true,
         // "composite": true,                     /* Enable project compilation */
-        // "removeComments": true,                /* Do not emit comments to output. */
+        "removeComments": true,                /* Do not emit comments to output. */
         // "noEmit": true,                        /* Do not emit outputs. */
         // "importHelpers": true,                 /* Import emit helpers from 'tslib'. */
         // "downlevelIteration": true,            /* Provide full support for iterables in 'for-of', spread, and destructuring when targeting 'ES5' or 'ES3'. */
@@ -36,7 +36,7 @@
         // "strictBindCallApply": true,           /* Enable strict 'bind', 'call', and 'apply' methods on functions. */
         // "strictPropertyInitialization": true,  /* Enable strict checking of property initialization in classes. */
         // "noImplicitThis": true,                /* Raise error on 'this' expressions with an implied 'any' type. */
-        // "alwaysStrict": true,                  /* Parse in strict mode and emit "use strict" for each source file. */
+        "alwaysStrict": true,                  /* Parse in strict mode and emit "use strict" for each source file. */
         "plugins": [
             {   /* Linter for Typescript*/
                 "name": "typescript-tslint-plugin"
@@ -50,11 +50,12 @@
         /* Module Resolution Options */
         "moduleResolution": "node" /* Specify module resolution strategy: 'node' (Node.js) or 'classic' (TypeScript pre-1.6). */,
         "baseUrl": "." /* Base directory to resolve non-absolute module names. */,
-        "paths": {
-            "@app/*": [
-                "../src"
-            ]
-        } /* A series of entries which re-map imports to lookup locations relative to the 'baseUrl'. */,
+        //"paths": {
+        //    "@app/*": [
+        //        "../src"
+        //    ]
+        //}
+        /* A series of entries which re-map imports to lookup locations relative to the 'baseUrl'. */,
         // "rootDirs": [],                        /* List of root folders whose combined content represents the structure of the project at runtime. */
         // "typeRoots": [],                       /* List of folders to include type definitions from. */
         // "types": [],                           /* Type declaration files to be included in compilation. */
@@ -74,8 +75,10 @@
         "."
     ],
     "exclude": [
-        "./node_modules",
+        "build_server",
+        "node_modules",
         "*.css",
         "*.scss",
+        "**/*.d.ts"
     ]
 }
