--- a/.env
+++ b/.env
@@ -8,6 +8,9 @@ CLIENT_COMMIT_HASH=7901ea3
 PORT=5000
 #HTTPS=true
 
+# React build options
+INLINE_RUNTIME_CHUNK=false
+
 # Server
 SERVER_HOST=localhost
 SERVER_PORT=5001
