--- a/package.json
+++ b/package.json
@@ -112,7 +112,8 @@
     "CRA:build": "react-scripts build",
     "CRA:test": "react-scripts test",
     "CRA:eject": "react-scripts eject",
-    "lint": "tsc --noEmit && eslint '*/**/*.{js,ts,tsx}' --quiet --fix"
+    "lint": "tsc --noEmit && eslint '*/**/*.{js,ts,tsx}' --quiet --fix",
+    "test:coverage": "react-scripts test --coverage --runInBand --watchAll=false"
   },
   "browserslist": {
     "production": [
@@ -128,18 +129,25 @@
   },
   "devDependencies": {
     "@types/dotenv": "^8.2.0",
+    "@types/enzyme": "3.10.5",
+    "@types/enzyme-adapter-react-16": "1.0.6",
     "@types/react-bootstrap-table-next": "^4.0.6",
     "@types/react-redux": "^7.1.9",
     "@typescript-eslint/eslint-plugin": "^2.34.0",
     "@typescript-eslint/parser": "^2.34.0",
     "babel-node": "0.0.1-security",
     "concurrently": "^5.3.0",
+    "enzyme": "3.11.0",
+    "enzyme-adapter-react-16": "1.15.4",
+    "enzyme-to-json": "3.5.0",
     "eslint": "^6.8.0",
     "eslint-config-google": "^0.14.0",
     "eslint-config-prettier": "^6.11.0",
     "eslint-plugin-prettier": "^3.1.4",
     "eslint-plugin-react": "^7.20.6",
     "install": "^0.13.0",
-    "prettier": "^2.1.1"
+    "jest-fetch-mock": "3.0.3",
+    "prettier": "^2.1.1",
+    "ts-jest": "26.3.0"
   }
 }
