--- a/package.json
+++ b/package.json
@@ -148,6 +148,7 @@
     "install": "^0.13.0",
     "jest-fetch-mock": "3.0.3",
     "prettier": "^2.1.1",
+    "redux-mock-store": "^1.5.4",
     "ts-jest": "26.3.0"
   },
   "jest": {
@@ -162,7 +163,12 @@
       "./src/index.tsx",
       "./src/serviceWorker.ts"
     ],
-    "coverageReporters": ["json","lcov","text-summary","clover"],
+    "coverageReporters": [
+      "json",
+      "lcov",
+      "text-summary",
+      "clover"
+    ],
     "coverageThreshold": {
       "global": {
         "statements": 95,
@@ -171,7 +177,9 @@
         "functions": 95
       }
     },
-    "snapshotSerializers": ["enzyme-to-json/serializer"],
+    "snapshotSerializers": [
+      "enzyme-to-json/serializer"
+    ],
     "transform": {
       "^.+\\.(js|jsx|ts|tsx)$": "<rootDir>/node_modules/ts-jest"
     },
@@ -179,5 +187,5 @@
       "[/\\\\]node_modules[/\\\\].+\\.(js|jsx|ts|tsx)$",
       "^.+\\.module\\.(css|sass|scss)$"
     ]
-}
+  }
 }
