--- a/package.json
+++ b/package.json
@@ -133,6 +133,8 @@
     "@types/enzyme-adapter-react-16": "1.0.6",
     "@types/react-bootstrap-table-next": "^4.0.6",
     "@types/react-redux": "^7.1.9",
+    "@types/react-test-renderer": "^16.9.3",
+    "@types/redux-mock-store": "^1.0.2",
     "@typescript-eslint/eslint-plugin": "^2.34.0",
     "@typescript-eslint/parser": "^2.34.0",
     "babel-node": "0.0.1-security",
