--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "calcetto",
   "private": true,
-  "version": "2.4.2",
+  "version": "2.5.0",
   "description": "Table Soccer Manager",
   "engines": {
     "node": "12.x",
@@ -66,6 +66,7 @@
     "helmet": "^4.1.0",
     "jquery": "^3.5.1",
     "jsonwebtoken": "^8.5.1",
+    "localforage": "^1.9.0",
     "log4js": "^6.3.0",
     "morgan": "^1.10.0",
     "nodemon": "^2.0.4",
@@ -87,6 +88,7 @@
     "react-select": "^3.1.0",
     "react-toastify": "^6.0.8",
     "redux": "^4.0.5",
+    "redux-persist": "^6.0.0",
     "redux-saga": "^1.1.3",
     "reflect-metadata": "^0.1.13",
     "sequelize": "^5.22.3",
