--- a/.env
+++ b/.env
@@ -4,8 +4,9 @@ NODE_ENV=development
 #Client
 CLIENT_HOST=localhost #Utilizzato dal server
 CLIENT_PORT=5000 #Utilizzato dal server
-REACT_APP_CLIENT_VERSION=2.4.0
-REACT_APP_CLIENT_COMMIT_HASH=7901ea3
+REACT_APP_CLIENT_VERSION=2.5.1
+REACT_APP_CLIENT_COMMIT_HASH=4a97136
+CLIENT_COMMIT_HASH=15
 
 PORT=5000
 #HTTPS=true
