--- a/package.json
+++ b/package.json
@@ -130,9 +130,8 @@
     ]
   },
   "devDependencies": {
+    "@testing-library/react": "^11.0.1",
     "@types/dotenv": "^8.2.0",
-    "@types/enzyme": "3.10.5",
-    "@types/enzyme-adapter-react-16": "1.0.6",
     "@types/react-bootstrap-table-next": "^4.0.6",
     "@types/react-redux": "^7.1.9",
     "@types/react-test-renderer": "^16.9.3",
@@ -141,9 +140,6 @@
     "@typescript-eslint/parser": "^2.34.0",
     "babel-node": "0.0.1-security",
     "concurrently": "^5.3.0",
-    "enzyme": "3.11.0",
-    "enzyme-adapter-react-16": "1.15.4",
-    "enzyme-to-json": "3.5.0",
     "eslint": "^6.8.0",
     "eslint-config-google": "^0.14.0",
     "eslint-config-prettier": "^6.11.0",
@@ -181,9 +177,6 @@
         "functions": 95
       }
     },
-    "snapshotSerializers": [
-      "enzyme-to-json/serializer"
-    ],
     "transform": {
       "^.+\\.(js|jsx|ts|tsx)$": "<rootDir>/node_modules/ts-jest"
     },
