--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
   },
   "husky": {
     "hooks": {
-      "pre-commit": "sed -i 's,'\"^CLIENT_COMMIT_HASH=.*$\"','CLIENT_COMMIT_HASH=\"$(git rev-parse --short HEAD)\"',g' .env "
+      "pre-commit": ""
     }
   },
   "lint-staged": {
@@ -112,12 +112,11 @@
     "start": "npm run prod:heroku:server",
     "CRA:start": "react-scripts start",
     "CRA:build": "react-scripts build",
-    "CRA:test": "react-scripts test",
     "CRA:eject": "react-scripts eject",
-    "lint": "tsc --noEmit && eslint '*/**/*.{js,ts,tsx}' --quiet --fix",
+    "test": "react-scripts test",
     "test:coverage": "react-scripts test --coverage --runInBand --watchAll=false",
-    "test:debug": "react-scripts --inspect-brk test --runInBand --no-cache"
-
+    "test:debug": "react-scripts --inspect-brk test --runInBand --no-cache",
+    "lint": "tsc --noEmit && eslint '*/**/*.{js,ts,tsx}' --quiet --fix"
   },
   "browserslist": {
     "production": [
@@ -132,8 +131,10 @@
     ]
   },
   "devDependencies": {
+    "@testing-library/dom": "^7.24.1",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.0.1",
+    "@testing-library/user-event": "^12.1.3",
     "@types/dotenv": "^8.2.0",
     "@types/react-bootstrap-table-next": "^4.0.6",
     "@types/react-redux": "^7.1.9",
