--- a/package.json
+++ b/package.json
@@ -42,15 +42,15 @@
     "@types/compression": "^1.7.0",
     "@types/cookie-parser": "^1.4.2",
     "@types/cors": "^2.8.7",
-    "@types/express": "^4.17.7",
+    "@types/express": "^4.17.8",
     "@types/express-session": "^1.17.0",
     "@types/glob": "^7.1.3",
     "@types/helmet": "0.0.48",
     "@types/jest": "^24.9.1",
     "@types/jsonwebtoken": "^8.5.0",
     "@types/morgan": "^1.9.1",
-    "@types/node": "^12.12.54",
-    "@types/react": "^16.9.48",
+    "@types/node": "^12.12.55",
+    "@types/react": "^16.9.49",
     "@types/react-bootstrap-date-picker": "^4.0.6",
     "@types/react-datepicker": "^2.11.1",
     "@types/react-dom": "^16.9.8",
@@ -133,7 +133,7 @@
   "devDependencies": {
     "@testing-library/dom": "^7.24.1",
     "@testing-library/jest-dom": "^5.11.4",
-    "@testing-library/react": "^11.0.1",
+    "@testing-library/react": "^11.0.2",
     "@testing-library/user-event": "^12.1.3",
     "@types/dotenv": "^8.2.0",
     "@types/react-bootstrap-table-next": "^4.0.6",
@@ -149,6 +149,7 @@
     "eslint-config-prettier": "^6.11.0",
     "eslint-plugin-prettier": "^3.1.4",
     "eslint-plugin-react": "^7.20.6",
+    "eslint-plugin-testing-library": "^3.8.0",
     "install": "^0.13.0",
     "jest-fetch-mock": "3.0.3",
     "prettier": "^2.1.1",
