--- a/package.json
+++ b/package.json
@@ -154,7 +154,7 @@
     "jest-fetch-mock": "3.0.3",
     "prettier": "^2.1.1",
     "redux-mock-store": "^1.5.4",
-    "ts-jest": "26.3.0"
+    "ts-jest": "^26.3.0"
   },
   "jest": {
     "collectCoverageFrom": [
