--- a/.github/workflows/Complete Pipeline.yml
+++ b/.github/workflows/Complete Pipeline.yml
@@ -40,6 +40,7 @@ jobs:
     runs-on: ubuntu-latest
     name: Build
     steps:
+      - uses: actions/checkout@v2
     # unit
       - name: Unit Tests
         run: npm run test
