--- a/.github/workflows/Complete Pipeline.yml
+++ b/.github/workflows/Complete Pipeline.yml
@@ -16,17 +16,18 @@ jobs:
         uses: actions/setup-node@v1
         with:
           node-version: ${{ matrix.node-version }}
-
       # Cache node-modules
       - name: Cache Node.js modules
         uses: actions/cache@v2
+        env:
+          cache-name: cache-node-modules
         with:
-          # npm cache files are stored in `~/.npm` on Linux/macOS
-          path: ~/.npm
-          key: ${{ runner.OS }}-node-${{ hashFiles('**/package-lock.json') }}
-          restore-keys: |
-            ${{ runner.OS }}-node-
-            ${{ runner.OS }}-
+           path: ~/.npm
+        key: ${{ runner.os }}-build-${{ env.cache-name }}-${{ hashFiles('**/package-lock.json') }}
+        restore-keys: |
+          ${{ runner.os }}-build-${{ env.cache-name }}-
+          ${{ runner.os }}-build-
+          ${{ runner.os }}-
       # Install dependecies
       - name: Install dependencies
         run: npm ci
@@ -38,15 +39,30 @@ jobs:
         run: npm run prod:build:server
   test:
     runs-on: ubuntu-latest
-    name: Build
+    name: Tests
     steps:
       - uses: actions/checkout@v2
-    # unit
+      # Cache node-modules
+      - name: Cache Node.js modules
+        uses: actions/cache@v2
+        env:
+          cache-name: cache-node-modules
+        with:
+           path: ~/.npm
+        key: ${{ runner.os }}-build-${{ env.cache-name }}-${{ hashFiles('**/package-lock.json') }}
+        restore-keys: |
+          ${{ runner.os }}-build-${{ env.cache-name }}-
+          ${{ runner.os }}-build-
+          ${{ runner.os }}-
+      # Install dependecies
+      - name: Install dependencies
+        run: npm ci
+      # unit test
       - name: Unit Tests
         run: npm run test
-    # e2e
-    # - name: End to end tests
-    #   run: npm run test
+      # e2e
+      # - name: End to end tests
+      #   run: npm run test
 
   # Code Quality
   check-quality:
