--- a/package.json
+++ b/package.json
@@ -106,7 +106,7 @@
     "uuid": "^7.0.3"
   },
   "scripts": {
-    "dev": "concurrently --kill-others-on-fail \"npm run dev:server\" \"npm run dev:client\"",
+    "dev": "concurrently -p \"[{name}]\" -n server,client -c \"bgGreen.bold,bgBlue.bold\"  --kill-others-on-fail \"npm run dev:server\" \"npm run dev:client\"",
     "dev:server": "cd server && nodemon --config \"./nodemon.json\"",
     "dev:client": "react-scripts start ",
     "prod:build:server": "tsc --pretty --allowJs --outDir ./build_server -p ./server",
