--- a/.github/workflows/Complete Pipeline.yml
+++ b/.github/workflows/Complete Pipeline.yml
@@ -84,8 +84,8 @@ jobs:
       - name: Install dependencies
         run: npm ci
       # Generate report
-      - name: Lint report
-        run: eslint -f json -o ./analysis/report.json .
+      #- name: Lint report
+      #  run: eslint -f json -o ./analysis/report.json .
       # https://github.com/marketplace/actions/sonarcloud-scan
       - name: SonarCloud Scan
         uses: sonarsource/sonarcloud-github-action@master
