--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "calcetto",
-  "private": true,
-  "version": "2.7.0",
+  "private": false,
+  "version": "2.8.0",
   "description": "Table Soccer Manager",
   "engines": {
     "node": "12.x",
