--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,28 +1,23 @@
-sonar.host.url=https://sonarcloud.io
+# sonar.host.url=https://sonarcloud.io
 sonar.organization=paolocattani
 sonar.projectKey=paolocattani_calcetto
-
 
 ## https://sonarcloud.io/documentation/analysis/analysis-parameters/
 # Optional Parameters
 sonar.projectName=Calcetto
-sonar.projectVersion=1.0
+sonar.projectVersion=2.8
 
 # relative paths to source directories. More details and properties are described
 # in https://sonarcloud.io/documentation/project-administration/narrowing-the-focus/
 sonar.sources=./src,./server
 sonar.exclusions=./build,./analysis/*
 
-sonar.eslint.reportPaths=./analysis/report.json
-
-sonar.verbose=true
-
+# sonar.eslint.reportPaths=./analysis/report.json
+# sonar.verbose=true
 # Coverage
 # -Dsonar.javascript.lcov.reportPaths=coverage/coverage-final.json
 
 sonar.sourceEncoding=UTF-8
-
-sonar.issues.defaultAssigneeLogin=paolocattani
 
 # Remove this after test
 sonar.coverage.exclusions=**/**
