--- a/package.json
+++ b/package.json
@@ -98,6 +98,7 @@
     "sequelize": "^5.22.3",
     "sequelize-cli": "^5.5.1",
     "sequelize-typescript": "^1.1.0",
+    "swagger-ui-react": "^3.33.0",
     "ts-node": "^9.0.0",
     "typeface-roboto": "0.0.75",
     "typesafe-actions": "^5.1.0",
@@ -146,6 +147,7 @@
     "@types/react-redux": "^7.1.9",
     "@types/react-test-renderer": "^16.9.3",
     "@types/redux-mock-store": "^1.0.2",
+    "@types/swagger-ui-react": "^3.23.3",
     "@typescript-eslint/eslint-plugin": "^2.34.0",
     "@typescript-eslint/parser": "^2.34.0",
     "babel-node": "0.0.1-security",
