--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -64,7 +64,7 @@ jobs:
   unit-test:
     runs-on: ubuntu-latest
     needs: build
-    name: unit tests
+    name: Unit tests
     # For now disable this step, only run e2e
     steps:
       - uses: actions/checkout@v2
@@ -103,12 +103,6 @@ jobs:
     needs: build
     name: Code Quality
     steps:
-        - uses: actions/checkout@v2
-        - name: Download build
-          uses: actions/download-artifact@v2
-          with:
-            name: build-14.x
-            path: build
         - name: Download analysis
           uses: actions/download-artifact@v2
           with:
