--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -20,12 +20,12 @@ sonar.sources=src, server
 
 # Exclusions
 # sonar.exclusions=build/**, analysis/** , **/coverage/**
-sonar.exclusions=build/**
+# sonar.exclusions=build/**
 # sonar.cpd.exclusions= build/**, analysis/** , **/coverage/**
-sonar.cpd.exclusions= build/**
+# sonar.cpd.exclusions= build/**
 # Fixme:
 # sonar.coverage.exclusions= build/**, analysis/** , **/coverage/**
-sonar.coverage.exclusions= */**
+# sonar.coverage.exclusions= */**
 
 # Coverage and Test
 # sonar.dynamicAnalysis=reuseReports
@@ -33,8 +33,8 @@ sonar.coverage.exclusions= */**
 # sonar.eslint.reportPaths=analysis/eslint-report.json
 
 # Test
-# sonar.testExecutionReportPaths=analysis/jest-sonar-report.xml
-# sonar.tests=src/test, server/test
-# sonar.test.inclusions=**/*.test.ts
+sonar.testExecutionReportPaths=analysis/jest-sonar-report.xml
+sonar.tests=src/test, server/test
+sonar.test.inclusions=**/*.test.ts
 
 
