--- a/package.json
+++ b/package.json
@@ -1,225 +1,224 @@
 {
-  "name": "calcetto",
-  "private": false,
-  "version": "2.16.3",
-  "description": "Table Soccer Manager",
-  "engines": {
-    "node": "14.x.x",
-    "npm": "7.x"
-  },
-  "keywords": [
-    "react",
-    "table soccer",
-    "typescript",
-    "sequelize"
-  ],
-  "repository": {
-    "type": "git",
-    "url": "github.com/paolocattani/calcetto"
-  },
-  "husky": {
-    "hooks": {
-      "pre-commit": ""
-    }
-  },
-  "lint-staged": {
-    "*.{js,jsx,ts,tsx,json,css,scss,md}": [
-      "eslint . --fix",
-      "prettier --write",
-      "git add"
-    ]
-  },
-  "dependencies": {
-    "@fortawesome/fontawesome-svg-core": "^1.2.35",
-    "@fortawesome/free-brands-svg-icons": "^5.15.3",
-    "@fortawesome/free-regular-svg-icons": "^5.15.3",
-    "@fortawesome/free-solid-svg-icons": "^5.15.3",
-    "@fortawesome/react-fontawesome": "^0.1.14",
-    "bootstrap": "^4.6.0",
-    "history": "^5.0.0",
-    "i18next": "^19.9.2",
-    "i18next-browser-languagedetector": "^6.0.1",
-    "i18next-http-backend": "^1.1.1",
-    "jquery": "^3.6.0",
-    "localforage": "^1.9.0",
-    "loglevel-plugin-prefix": "^0.8.4",
-    "rate-limiter-flexible": "^2.2.1",
-    "react": "^17.0.1",
-    "react-bootstrap": "^1.5.2",
-    "react-bootstrap-table-next": "^4.0.3",
-    "react-bootstrap-table2-editor": "^1.4.0",
-    "react-bootstrap-table2-filter": "^1.3.3",
-    "react-bootstrap-table2-toolkit": "^2.1.3",
-    "react-cookie-consent": "^6.2.3",
-    "react-datepicker": "^3.6.0",
-    "react-dom": "^17.0.1",
-    "react-facebook-login": "^4.1.1",
-    "react-google-login": "^5.2.2",
-    "react-i18next": "^11.8.10",
-    "react-redux": "^7.2.2",
-    "react-router-dom": "^5.2.0",
-    "react-scripts": "^4.0.3",
-    "react-select": "^4.2.1",
-    "react-toastify": "^7.0.3",
-    "redux": "^4.0.5",
-    "redux-persist": "^6.0.0",
-    "redux-saga": "^1.1.3",
-    "socket.io-client": "^4.0.0",
-    "swagger-ui-react": "^3.45.0",
-    "typeface-roboto": "^1.1.13",
-    "typesafe-actions": "^5.1.0",
-    "typescript": "^4.2.3",
-    "web-push-notifications": "^3.18.2"
-  },
-  "scripts": {
-    "-----DEVELOPMENT----": "---------------------------",
-    "dev": "concurrently -p \"[{name}]\" -n server,client -c \"bgGreen.bold,bgBlue.bold\"  --kill-others-on-fail \"npm run dev:server\" \"npm run dev:client\"",
-    "dev:server": "NODE_ENV=development cd server && npm run dev",
-    "dev:client": "NODE_ENV=development npm run CRA:start",
-    "-----PRODUCTION----": "---------------------------",
-    "prod:server:js": "cd server && npm run prod",
-    "prod:server": "cd server && npm run prod:ts",
-    "prod:build": "cd server && npm run build",
-    "-----HEROKU----": "---------------------------",
-    "heroku:log-stage": "heroku logs --app calcetto2020stage",
-    "heroku:log-prod": "heroku logs --app calcetto2020prod",
-    "heroku-prebuild": "bash cli/cli.sh heroku --prebuild --no-redirect",
-    "heroku-postbuild": "bash cli/cli.sh heroku --postbuild --no-redirect",
-    "heroku-cleanup": "",
-    "start": "bash cli/cli.sh heroku --start --no-redirect",
-    "-----CRA----": "---------------------------",
-    "CRA:start": "react-scripts start",
-    "CRA:build": "cross-env NODE_ENV=production react-scripts build ",
-    "CRA:eject": "react-scripts eject",
-    "CRA:test": "react-scripts test --env=jsdom --testResultsProcessor ./node_modules/jest-sonar-reporter",
-    "CRA:test:coverage": "react-scripts test --env=jsdom --env=jest-environment-jsdom-sixteen --testResultsProcessor ./node_modules/jest-sonar-reporter --coverage",
-    "-----TEST----": "---------------------------",
-    "test:app": "concurrently -p \"[{name}]\" -n server,client -c \"bgGreen.bold,bgBlue.bold\"  --kill-others-on-fail \"npm run test:app:server\" \"npm run test:app:client\"",
-    "test:app:server": "cross-env NODE_ENV=test npm run prod:heroku:server",
-    "test:app:server:coverage": "cross-env NODE_ENV=test nyc --silent npm run dev:server",
-    "test:app:client": "cross-env NODE_ENV=test CI=true BROWSER=NONE react-scripts --require @cypress/instrument-cra start",
-    "test:client:coverage": "react-scripts test --coverage --watchAll=false --silent --testResultsProcessor ./node_modules/jest-sonar-reporter ",
-    "test:client:debug": "react-scripts --inspect-brk test --runInBand --no-cache --env=jest-environment-jsdom-sixteen",
-    "test:e2e": "cross-env NODE_ENV=test start-server-and-test test:app 5000 cypress:run",
-    "cypress:open": "cypress open",
-    "cypress:run": "cypress run  --record --key d290f2c0-5104-4643-96ff-ba6f773d0a9c --browser chrome --headless",
-    "-----LINT, ANALYZE----": "---------------------------",
-    "lint": "tsc --noEmit && eslint '*/**/*.{js,ts,tsx}' --quiet --fix",
-    "lint:report": "./node_modules/.bin/eslint -f json -o ./analysis/eslint-report.json .",
-    "analyze": "source-map-explorer build/static/js/*.js --html analysis/build-analysis.html",
-    "-----CLI----": "---------------------------",
-    "cli_release": "sh cli/cli release",
-    "cli_build": "sh cli/cli build",
-    "-----FIREBASE----": "---------------------------",
-    "firebase:emulator": "firebase emulators:start",
-    "firebase:emulator:hosting": "firebase emulators:start --only hosting",
-    "firebase:emulator:functions": "firebase emulators:start --only functions",
-    "firebase:deploy:stage": "firebase deploy --only hosting:calcetto-stage"
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
-  },
-  "devDependencies": {
-    "@cypress/code-coverage": "^3.9.2",
-    "@cypress/instrument-cra": "^1.4.0",
-    "@cypress/webpack-preprocessor": "^5.6.0",
-    "@istanbuljs/nyc-config-typescript": "^1.0.1",
-    "@ljharb/eslint-config": "^17.5.1",
-    "@shinnn/eslint-config": "^7.0.0",
-    "@testing-library/dom": "^7.30.0",
-    "@testing-library/jest-dom": "^5.11.9",
-    "@testing-library/react": "^11.2.5",
-    "@testing-library/user-event": "^13.0.0",
-    "@types/history": "^4.7.8",
-    "@types/i18next-browser-languagedetector": "^3.0.0",
-    "@types/jest": "^26.0.20",
-    "@types/lodash": "^4.14.168",
-    "@types/react": "^17.0.3",
-    "@types/react-bootstrap-date-picker": "^4.0.6",
-    "@types/react-bootstrap-table-next": "^4.0.11",
-    "@types/react-datepicker": "^3.1.7",
-    "@types/react-dom": "^17.0.2",
-    "@types/react-redux": "^7.1.16",
-    "@types/react-router": "^5.1.12",
-    "@types/react-router-dom": "^5.1.7",
-    "@types/react-select": "^4.0.13",
-    "@types/react-test-renderer": "^17.0.1",
-    "@types/redux-mock-store": "^1.0.2",
-    "@types/swagger-ui-react": "^3.35.0",
-    "@typescript-eslint/eslint-plugin": "^4.18.0",
-    "@typescript-eslint/parser": "^4.18.0",
-    "babel-node": "0.0.1-security",
-    "concurrently": "^6.0.0",
-    "cross-env": "^7.0.3",
-    "cypress": "^6.7.1",
-    "cypress-intellij-reporter": "0.0.6",
-    "cypress-plugin-snapshots": "^1.4.4",
-    "cypress-skip-and-only-ui": "^1.2.10",
-    "cypress-watch-and-reload": "^1.3.6",
-    "eslint": "^7.22.0",
-    "eslint-config-google": "^0.14.0",
-    "eslint-config-prettier": "^8.1.0",
-    "eslint-config-sinon": "^4.0.0",
-    "eslint-config-strict": "^14.0.1",
-    "eslint-plugin-ie11": "^1.0.0",
-    "eslint-plugin-jsdoc": "^32.3.0",
-    "eslint-plugin-prettier": "^3.3.1",
-    "eslint-plugin-react": "^7.22.0",
-    "eslint-plugin-sonarjs": "^0.6.0",
-    "eslint-plugin-testing-library": "^3.10.1",
-    "istanbul-lib-coverage": "^3.0.0",
-    "jest-environment-jsdom-sixteen": "^1.0.3",
-    "jest-fetch-mock": "3.0.3",
-    "jest-sonar-reporter": "^2.0.0",
-    "nyc": "^15.1.0",
-    "prettier": "^2.2.1",
-    "redux-mock-store": "^1.5.4",
-    "source-map-explorer": "^2.5.2",
-    "source-map-support": "^0.5.19",
-    "start-server-and-test": "^1.12.0",
-    "ts-jest": "^26.5.3",
-    "ts-loader": "^8.0.18",
-    "webpack": "^4.44.2"
-  },
-  "jestSonar": {
-    "useRelativePath": true,
-    "reportPath": "analysis",
-    "reportFile": "jest-sonar-report.xml",
-    "indent": 4
-  },
-  "jest": {
-    "collectCoverageFrom": [
-      "src/**/*.{js,jsx,ts,tsx}",
-      "!src/**/*.d.ts",
-      "!src/index.tsx",
-      "!src/serviceWorker.ts"
-    ],
-    "coveragePathIgnorePatterns": [
-      "./src/*/*.types.{ts,tsx}",
-      "./src/index.tsx",
-      "./src/serviceWorker.ts"
-    ],
-    "coverageReporters": [
-      "json",
-      "lcov",
-      "text-summary",
-      "clover"
-    ],
-    "transform": {
-      "^.+\\.(js|jsx|ts|tsx)$": "<rootDir>/node_modules/ts-jest"
-    },
-    "transformIgnorePatterns": [
-      "[/\\\\]node_modules[/\\\\].+\\.(js|jsx|ts|tsx)$",
-      "^.+\\.module\\.(css|sass|scss)$"
-    ]
-  }
+	"name": "calcetto",
+	"private": false,
+	"version": "2.16.3",
+	"description": "Table Soccer Manager",
+	"engines": {
+		"node": "14.x.x",
+		"npm": "7.x"
+	},
+	"keywords": [
+		"react",
+		"table soccer",
+		"typescript",
+		"sequelize"
+	],
+	"repository": {
+		"type": "git",
+		"url": "github.com/paolocattani/calcetto"
+	},
+	"husky": {
+		"hooks": {
+			"pre-commit": ""
+		}
+	},
+	"lint-staged": {
+		"*.{js,jsx,ts,tsx,json,css,scss,md}": [
+			"eslint . --fix",
+			"prettier --write",
+			"git add"
+		]
+	},
+	"dependencies": {
+		"@fortawesome/fontawesome-svg-core": "^1.2.35",
+		"@fortawesome/free-brands-svg-icons": "^5.15.3",
+		"@fortawesome/free-regular-svg-icons": "^5.15.3",
+		"@fortawesome/free-solid-svg-icons": "^5.15.3",
+		"@fortawesome/react-fontawesome": "^0.1.14",
+		"bootstrap": "^4.6.0",
+		"history": "^5.0.0",
+		"i18next": "^19.9.2",
+		"i18next-browser-languagedetector": "^6.1.2",
+		"i18next-http-backend": "^1.2.6",
+		"jquery": "^3.6.0",
+		"localforage": "^1.9.0",
+		"loglevel-plugin-prefix": "^0.8.4",
+		"rate-limiter-flexible": "^2.2.3",
+		"react": "^17.0.2",
+		"react-bootstrap": "^1.6.1",
+		"react-bootstrap-table-next": "^4.0.3",
+		"react-bootstrap-table2-editor": "^1.4.0",
+		"react-bootstrap-table2-filter": "^1.3.3",
+		"react-bootstrap-table2-toolkit": "^2.1.3",
+		"react-cookie-consent": "^6.2.4",
+		"react-datepicker": "^3.8.0",
+		"react-dom": "^17.0.2",
+		"react-facebook-login": "^4.1.1",
+		"react-google-login": "^5.2.2",
+		"react-i18next": "^11.11.1",
+		"react-redux": "^7.2.4",
+		"react-router-dom": "^5.2.0",
+		"react-scripts": "^4.0.3",
+		"react-select": "^4.3.1",
+		"react-toastify": "^7.0.4",
+		"redux": "^4.1.0",
+		"redux-persist": "^6.0.0",
+		"redux-saga": "^1.1.3",
+		"socket.io-client": "^4.1.3",
+		"swagger-ui-react": "^3.51.1",
+		"typeface-roboto": "^1.1.13",
+		"typesafe-actions": "^5.1.0",
+		"typescript": "^4.3.5",
+		"web-push-notifications": "^3.20.1"
+	},
+	"scripts": {
+		"-----DEVELOPMENT----": "---------------------------",
+		"dev": "concurrently -p \"[{name}]\" -n server,client -c \"bgGreen.bold,bgBlue.bold\"  --kill-others-on-fail \"npm run dev:server\" \"npm run dev:client\"",
+		"dev:server": "NODE_ENV=development cd server && npm run dev",
+		"dev:client": "NODE_ENV=development npm run CRA:start",
+		"-----PRODUCTION----": "---------------------------",
+		"prod:server:js": "cd server && npm run prod",
+		"prod:server": "cd server && npm run prod:ts",
+		"prod:build": "cd server && npm run build",
+		"-----HEROKU----": "---------------------------",
+		"heroku:log-stage": "heroku logs --app calcetto2020stage",
+		"heroku:log-prod": "heroku logs --app calcetto2020prod",
+		"heroku-prebuild": "bash cli/cli.sh heroku --prebuild --no-redirect",
+		"heroku-postbuild": "bash cli/cli.sh heroku --postbuild --no-redirect",
+		"heroku-cleanup": "",
+		"start": "bash cli/cli.sh heroku --start --no-redirect",
+		"-----CRA----": "---------------------------",
+		"CRA:start": "react-scripts start",
+		"CRA:build": "cross-env NODE_ENV=production react-scripts build ",
+		"CRA:eject": "react-scripts eject",
+		"CRA:test": "react-scripts test --env=jsdom --testResultsProcessor ./node_modules/jest-sonar-reporter",
+		"CRA:test:coverage": "react-scripts test --env=jsdom --env=jest-environment-jsdom-sixteen --testResultsProcessor ./node_modules/jest-sonar-reporter --coverage",
+		"-----TEST----": "---------------------------",
+		"test:app": "concurrently -p \"[{name}]\" -n server,client -c \"bgGreen.bold,bgBlue.bold\"  --kill-others-on-fail \"npm run test:app:server\" \"npm run test:app:client\"",
+		"test:app:server": "cross-env NODE_ENV=test npm run prod:heroku:server",
+		"test:app:server:coverage": "cross-env NODE_ENV=test nyc --silent npm run dev:server",
+		"test:app:client": "cross-env NODE_ENV=test CI=true BROWSER=NONE react-scripts --require @cypress/instrument-cra start",
+		"test:client:coverage": "react-scripts test --coverage --watchAll=false --silent --testResultsProcessor ./node_modules/jest-sonar-reporter ",
+		"test:client:debug": "react-scripts --inspect-brk test --runInBand --no-cache --env=jest-environment-jsdom-sixteen",
+		"test:e2e": "cross-env NODE_ENV=test start-server-and-test test:app 5000 cypress:run",
+		"cypress:open": "cypress open",
+		"cypress:run": "cypress run  --record --key d290f2c0-5104-4643-96ff-ba6f773d0a9c --browser chrome --headless",
+		"-----LINT, ANALYZE----": "---------------------------",
+		"lint": "tsc --noEmit && eslint '*/**/*.{js,ts,tsx}' --quiet --fix",
+		"lint:report": "./node_modules/.bin/eslint -f json -o ./analysis/eslint-report.json .",
+		"analyze": "source-map-explorer build/static/js/*.js --html analysis/build-analysis.html",
+		"-----CLI----": "---------------------------",
+		"cli_release": "sh cli/cli release",
+		"cli_build": "sh cli/cli build",
+		"-----FIREBASE----": "---------------------------",
+		"firebase:emulator": "firebase emulators:start",
+		"firebase:emulator:hosting": "firebase emulators:start --only hosting",
+		"firebase:emulator:functions": "firebase emulators:start --only functions",
+		"firebase:deploy:stage": "firebase deploy --only hosting:calcetto-stage"
+	},
+	"browserslist": {
+		"production": [
+			">0.2%",
+			"not dead",
+			"not op_mini all"
+		],
+		"development": [
+			"last 1 chrome version",
+			"last 1 firefox version",
+			"last 1 safari version"
+		]
+	},
+	"devDependencies": {
+		"@cypress/code-coverage": "^3.9.9",
+		"@cypress/instrument-cra": "^1.4.0",
+		"@cypress/webpack-preprocessor": "^5.9.1",
+		"@istanbuljs/nyc-config-typescript": "^1.0.1",
+		"@ljharb/eslint-config": "^17.6.0",
+		"@shinnn/eslint-config": "^7.0.0",
+		"@testing-library/dom": "^7.31.2",
+		"@testing-library/jest-dom": "^5.14.1",
+		"@testing-library/react": "^11.2.7",
+		"@testing-library/user-event": "^13.1.9",
+		"@types/history": "^4.7.9",
+		"@types/i18next-browser-languagedetector": "^3.0.0",
+		"@types/jest": "^26.0.24",
+		"@types/lodash": "^4.14.171",
+		"@types/react": "^17.0.14",
+		"@types/react-bootstrap-date-picker": "^4.0.7",
+		"@types/react-bootstrap-table-next": "^4.0.15",
+		"@types/react-datepicker": "^3.1.8",
+		"@types/react-dom": "^17.0.9",
+		"@types/react-redux": "^7.1.18",
+		"@types/react-router": "^5.1.16",
+		"@types/react-router-dom": "^5.1.8",
+		"@types/react-select": "^4.0.17",
+		"@types/react-test-renderer": "^17.0.1",
+		"@types/redux-mock-store": "^1.0.3",
+		"@types/swagger-ui-react": "^3.35.2",
+		"@typescript-eslint/eslint-plugin": "^4.28.3",
+		"@typescript-eslint/parser": "^4.28.3",
+		"babel-node": "0.0.1-security",
+		"concurrently": "^6.2.0",
+		"cross-env": "^7.0.3",
+		"cypress": "^6.9.1",
+		"cypress-intellij-reporter": "0.0.6",
+		"cypress-plugin-snapshots": "^1.4.4",
+		"cypress-skip-and-only-ui": "^1.2.11",
+		"cypress-watch-and-reload": "^1.3.13",
+		"eslint": "^7.30.0",
+		"eslint-config-google": "^0.14.0",
+		"eslint-config-prettier": "^8.3.0",
+		"eslint-config-sinon": "^4.0.0",
+		"eslint-config-strict": "^14.0.1",
+		"eslint-plugin-ie11": "^1.0.0",
+		"eslint-plugin-jsdoc": "^32.3.4",
+		"eslint-plugin-prettier": "^3.4.0",
+		"eslint-plugin-react": "^7.24.0",
+		"eslint-plugin-sonarjs": "^0.6.0",
+		"eslint-plugin-testing-library": "^3.10.2",
+		"istanbul-lib-coverage": "^3.0.0",
+		"jest-environment-jsdom-sixteen": "^1.0.3",
+		"jest-fetch-mock": "3.0.3",
+		"jest-sonar-reporter": "^2.0.0",
+		"nyc": "^15.1.0",
+		"prettier": "^2.3.2",
+		"redux-mock-store": "^1.5.4",
+		"source-map-explorer": "^2.5.2",
+		"source-map-support": "^0.5.19",
+		"start-server-and-test": "^1.12.6",
+		"ts-jest": "^26.5.6",
+		"ts-loader": "^8.3.0"
+	},
+	"jestSonar": {
+		"useRelativePath": true,
+		"reportPath": "analysis",
+		"reportFile": "jest-sonar-report.xml",
+		"indent": 4
+	},
+	"jest": {
+		"collectCoverageFrom": [
+			"src/**/*.{js,jsx,ts,tsx}",
+			"!src/**/*.d.ts",
+			"!src/index.tsx",
+			"!src/serviceWorker.ts"
+		],
+		"coveragePathIgnorePatterns": [
+			"./src/*/*.types.{ts,tsx}",
+			"./src/index.tsx",
+			"./src/serviceWorker.ts"
+		],
+		"coverageReporters": [
+			"json",
+			"lcov",
+			"text-summary",
+			"clover"
+		],
+		"transform": {
+			"^.+\\.(js|jsx|ts|tsx)$": "<rootDir>/node_modules/ts-jest"
+		},
+		"transformIgnorePatterns": [
+			"[/\\\\]node_modules[/\\\\].+\\.(js|jsx|ts|tsx)$",
+			"^.+\\.module\\.(css|sass|scss)$"
+		]
+	}
 }
