--- a/server/package.json
+++ b/server/package.json
@@ -29,82 +29,82 @@
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.2",
-    "@types/compression": "^1.7.0",
+    "@types/compression": "^1.7.1",
     "@types/connect-redis": "0.0.16",
     "@types/cookie-parser": "^1.4.2",
-    "@types/cors": "^2.8.10",
-    "@types/csurf": "^1.11.0",
-    "@types/express-session": "^1.17.3",
-    "@types/fs-extra": "^9.0.9",
-    "@types/history": "^4.7.8",
-    "@types/jest": "^26.0.22",
-    "@types/jsonwebtoken": "^8.5.1",
-    "@types/morgan": "^1.9.2",
-    "@types/node-fetch": "^2.5.8",
-    "@types/node-schedule": "^1.3.1",
-    "@types/ratelimiter": "^3.4.1",
-    "@types/redis": "^2.8.28",
+    "@types/cors": "^2.8.12",
+    "@types/csurf": "^1.11.2",
+    "@types/express-session": "^1.17.4",
+    "@types/fs-extra": "^9.0.12",
+    "@types/history": "^4.7.9",
+    "@types/jest": "^26.0.24",
+    "@types/jsonwebtoken": "^8.5.4",
+    "@types/morgan": "^1.9.3",
+    "@types/node-fetch": "^2.5.11",
+    "@types/node-schedule": "^1.3.2",
+    "@types/ratelimiter": "^3.4.2",
+    "@types/redis": "^2.8.31",
     "@types/request-ip": "0.0.35",
     "@types/socket.io-redis": "^1.0.27",
-    "@types/supertest": "^2.0.10",
-    "@types/uuid": "^8.3.0",
-    "@types/validator": "^13.1.3",
+    "@types/supertest": "^2.0.11",
+    "@types/uuid": "^8.3.1",
+    "@types/validator": "^13.6.3",
     "cross-env": "^7.0.3",
     "jest": "^26.6.3",
     "node-fetch": "^2.6.1",
-    "nodemon": "^2.0.7",
+    "nodemon": "^2.0.12",
     "sequelize-cli": "^6.2.0",
-    "snyk": "^1.493.0",
-    "start-server-and-test": "^1.12.0",
+    "snyk": "^1.660.0",
+    "start-server-and-test": "^1.12.6",
     "supertest": "^6.1.3",
-    "ts-jest": "^26.5.4",
+    "ts-jest": "^26.5.6",
     "ts-node": "^9.1.1",
-    "tsconfig-paths": "^3.9.0",
+    "tsconfig-paths": "^3.10.1",
     "ttypescript": "^1.5.12",
-    "typescript": "^4.2.3",
-    "typescript-transform-paths": "^2.2.3"
+    "typescript": "^4.3.5",
+    "typescript-transform-paths": "^2.2.4"
   },
   "dependencies": {
-    "apollo-server": "^2.21.2",
-    "apollo-server-core": "^2.22.1",
-    "apollo-server-express": "^2.22.1",
+    "apollo-server": "^2.25.2",
+    "apollo-server-core": "^2.25.2",
+    "apollo-server-express": "^2.25.2",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
     "bufferutil": "^4.0.3",
-    "chalk": "^4.1.0",
+    "chalk": "^4.1.1",
     "compression": "^1.7.4",
-    "connect-redis": "^5.1.0",
+    "connect-redis": "^5.2.0",
     "cookie-parser": "^1.4.5",
     "cors": "^2.8.5",
     "csurf": "^1.11.0",
-    "dotenv": "^8.2.0",
+    "dotenv": "^8.6.0",
     "express": "^4.17.1",
-    "express-session": "^1.17.1",
-    "graphql": "^15.5.0",
+    "express-session": "^1.17.2",
+    "graphql": "^15.5.1",
     "graphql-compose": "^7.25.1",
-    "graphql-compose-mongoose": "^9.2.0",
+    "graphql-compose-mongoose": "^9.4.3",
     "graphql-playground-middleware-express": "^1.7.22",
-    "helmet": "^4.4.1",
+    "helmet": "^4.6.0",
     "jsonwebtoken": "^8.5.1",
     "log4js": "^6.3.0",
-    "mongoose": "^5.12.3",
+    "mongoose": "^5.13.2",
     "mongoose-timestamp": "^0.6.0",
     "morgan": "^1.10.0",
     "node-schedule": "^2.0.0",
-    "pg": "^8.5.1",
-    "pg-hstore": "^2.3.3",
-    "pm2": "^4.5.5",
-    "rate-limiter-flexible": "^2.2.1",
-    "redis": "^3.1.1",
+    "pg": "^8.6.0",
+    "pg-hstore": "^2.3.4",
+    "pm2": "^5.1.0",
+    "rate-limiter-flexible": "^2.2.3",
+    "redis": "^3.1.2",
     "reflect-metadata": "^0.1.13",
     "request-ip": "^2.1.3",
-    "sequelize": "^6.5.1",
+    "sequelize": "^6.6.5",
     "sequelize-typescript": "^2.1.0",
-    "socket.io": "^4.0.0",
-    "socket.io-redis": "^6.1.0",
+    "socket.io": "^4.1.3",
+    "socket.io-redis": "^6.1.1",
     "strong-error-handler": "^4.0.0",
-    "umzug": "^3.0.0-beta.15",
-    "utf-8-validate": "^5.0.4",
+    "umzug": "^3.0.0-beta-cli.12",
+    "utf-8-validate": "^5.0.5",
     "uuid": "^8.3.2"
   }
 }
